--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-image: url("https://images.pexels.com/photos/5088017/pexels-photo-5088017.jpeg?cs=srgb&dl=pexels-olia-danilevich-5088017.jpg&fm=jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 92vw;
+  height: 83vh;
   display: flex;
   flex-direction: column;
+  padding: 4%;
+  opacity: 1;
+  /* justify-content: center; */
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.todoInput {
+  margin-bottom: 2rem;
+}
+
+.todoInput form {
+  display: flex;
+  align-items: center;
+}
+
+.todoInput form input {
+  padding: 0.5rem;
+  background-color: white;
+  color: black;
+  border: 2px solid rgb(6, 6, 6);
+  border-radius: 5px;
+  width: 20rem;
+  margin-right: 1rem;
+  outline: none;
+}
+
+.todoInput form button {
+  padding: 0.5rem 1rem;
+  font-size: 15px;
+  font-weight: bold;
+  background-color: black;
   color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+.todoInput form button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todoContainer {
+  background-color: rgba(79, 78, 78, 0.8);
+  color: #fff;
+  width: 50%;
+  margin: 20px auto;
+  border-radius: 12px;
+  padding: 2rem;
+}
+
+.todolist .item {
+  background-color: white;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* align-items: center; */
+  color: black;
+  border-radius: 5px;
+  width: 100%;
+  margin: 10px auto;
+  gap: 10px;
+}
+
+.todolist span {
+  font-size: 1.2rem;
+  margin: 14px;
+  padding: 10px;
+
+  /* margin: 40px; */
+}
+
+.todolist .btn {
+  display: inline;
+  margin: 10px;
+}
+
+.todolist .btn button {
+  margin: 2px 10px;
+  padding: 5px 10px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.todolist .btn button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+.editinput {
+  padding: 0.5rem;
+  color: white;
+  background-color: rgb(66, 61, 61);
+  border: 2px solid white;
+  border-radius: 5px;
+  width: 80%;
+  outline: none;
 }
